# goit-pythonweb-hw-10

./: main.py  pyproject.toml
src/conf/: config.py
src/entity/: models.py
src/repository/: contacts_book.py
src/routes/: contacts_book.py
src/services/: contacts_book.py
